--- a/src/main/webapp/angular/preta/directives/page-footer/template.html
+++ b/src/main/webapp/angular/preta/directives/page-footer/template.html
@@ -25,7 +25,7 @@
 				<h3><b>Réseaux sociaux</b></h3>
 				<hr style="border: 1px solid #ff7328;" />
 				<div class="btn-group">
-					<a href="#" class="btn btn-primary btn-flat fa fa-facebook center-block"></a>
+					<a href="https://www.facebook.com/hobossahobossa" class="btn btn-primary btn-flat fa fa-facebook center-block"></a>
 				</div>
 			</div>
 		</div>
