--- a/src/main/webapp/angular/preta/index.html
+++ b/src/main/webapp/angular/preta/index.html
@@ -91,6 +91,8 @@
 		<script src="angular/plugins/angular-audio/angular.audio.js"></script>
 		<!-- Angular Slider -->
 		<script src="angular/plugins/angular-slider/rzslider.min.js"></script>
+		<!-- Angular Captcha -->
+		<script src="angular/plugins/angular-recaptcha/angular-recaptcha.min.js"></script>
 		<!-- End Libs & Plugins -->
 		
 		<script src="angular/preta/app.js"></script>
