Updated UI Bootstrap for Angular; Tracking page added; Article Thumbnails for Pictures, Maager Interfaces fix

--- a/src/main/webapp/angular/preta/directives/navbar-top/template.html
+++ b/src/main/webapp/angular/preta/directives/navbar-top/template.html
@@ -70,7 +70,7 @@
 				<li role="presentation" x-ng-if="loggedUser != null">
 					<a x-ui-sref="root.favorites-e-shops">Boutiques Favorites</a>
 				</li>
-				<li role="presentation"><a>Tracking de colis</a></li>
+				<li role="presentation"><a x-ui-sref="root.tracking">Tracking de colis</a></li>
 				<li role="presentation" x-ng-if="loggedUser != null">
 					<a x-ui-sref="root.orders-all">Mes Commandes</a>
 				</li>
