--- a/src/main/webapp/angular/preta/index.html
+++ b/src/main/webapp/angular/preta/index.html
@@ -66,7 +66,7 @@
 		<script src="angular/plugins/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="angular/plugins/ionrangeslider/js/ion.rangeSlider.min.js"></script>
 		<script src="angular/plugins/ionrangeslider/js/ionic-range-slider.js"></script>
-		<script src="angular/plugins/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+		<script src="angular/plugins/angular-bootstrap/ui-bootstrap-tpls-2.5.0.min.js"></script>
 		<script src="angular/plugins/angular-animate/angular-animate.js"></script>
 		<!-- ngFileUpload -->
 		<script src="angular/plugins/file-upload/ng-file-upload-all.min.js"></script>
@@ -164,6 +164,7 @@
 		<script src="angular/preta/controllers/ArticleByCategoryController.js"></script>
 		<script src="angular/preta/controllers/LastVisitedController.js"></script>
 		<script src="angular/preta/controllers/EShopController.js"></script>
+		<script src="angular/preta/controllers/TrackingController.js"></script>
 		<script src="angular/preta/controllers/SearchController.js"></script>
 		<script src="angular/preta/controllers/CartController.js"></script>
 		<script src="angular/preta/controllers/CheckoutController.js"></script>
