Admin OrderController Tweaked

--- a/src/main/webapp/angular/preta/directives/default-article-widget/template.html
+++ b/src/main/webapp/angular/preta/directives/default-article-widget/template.html
@@ -1,6 +1,6 @@
 <div class="product-container animated fadeIn">
 	<a x-ui-sref="root.article( { id: article.id} )">
-		<img x-ng-src="https://drive.google.com/uc?id={{ article.pictures[0].googleId }}&amp;export=download" class="img-responsive product-img" />
+		<img x-ng-src="https://drive.google.com/uc?id={{ article.pictures[0].googleId }}&amp;export=download" class="img-responsive product-img animated fadeIn" />
 		<!-- <img x-ng-src="rest/article/fetchDefaultPic/{{ article.id }}" class="img-responsive product-img" /> -->
 		<!-- <img x-ng-src="https://drive.google.com/uc?id={{ article.pictures[0].googleId }}&export=download" class="img-responsive product-img" /> -->
 	</a>
