--- a/src/main/webapp/angular/preta/index.html
+++ b/src/main/webapp/angular/preta/index.html
@@ -93,6 +93,8 @@
 		<script src="angular/plugins/angular-slider/rzslider.min.js"></script>
 		<!-- Angular Captcha -->
 		<script src="angular/plugins/angular-recaptcha/angular-recaptcha.min.js"></script>
+		<!-- Angular Preload Image -->
+		<script src="angular/plugins/angular-preload-image/angular-preload-image.min.js"></script>
 		<!-- End Libs & Plugins -->
 		
 		<script src="angular/preta/app.js"></script>
