--- a/src/main/webapp/angular/preta-admin/index.html
+++ b/src/main/webapp/angular/preta-admin/index.html
@@ -329,6 +329,11 @@
 		<script src="angular/preta-admin/services/PaymentService.js"></script>
 		<!-- End Payments -->
 		
+		<!-- Expense -->
+		<script src="angular/preta-admin/controllers/ExpenseController.js"></script>
+		<script src="angular/preta-admin/services/ExpenseService.js"></script>
+		<!-- End Expense -->
+		
 		<!-- AdvOffers -->
 		<script src="angular/preta-admin/controllers/AdvOfferController.js"></script>
 		<script src="angular/preta-admin/services/AdvOfferService.js"></script>
