--- a/src/main/webapp/angular/preta-admin/index.html
+++ b/src/main/webapp/angular/preta-admin/index.html
@@ -262,6 +262,7 @@
 		<!-- Custom Directives  -->
 		<script src="angular/preta-admin/directives/sub-status/sub-status.js"></script>
 		<script src="angular/preta-admin/directives/payment-card/directive.js"></script>
+		<script src="angular/preta-admin/directives/expense-card/directive.js"></script>
 		<script src="angular/preta-admin/directives/order-status/directive.js"></script>
 		<script src="angular/preta-admin/directives/state-label/state-label.js"></script>
 		<script src="angular/preta-admin/directives/shop-sub-card/directive.js"></script>
