Expenses for Manager and Admin + Notifications ( Need fix)

--- a/src/main/webapp/angular/preta-manager/index.html
+++ b/src/main/webapp/angular/preta-manager/index.html
@@ -298,6 +298,11 @@
 		<script src="angular/preta-manager/services/AdvOfferService.js"></script>
 		<!--  End AdvOffers  -->
 		
+		<!-- Expense -->
+		<script src="angular/preta-manager/controllers/ExpenseController.js"></script>
+		<script src="angular/preta-manager/services/ExpenseService.js"></script>
+		<!--  End Expense  -->
+		
 		<!-- Payment -->
 		<script src="angular/common/services/PaymentService.js"></script>
 		<!-- End Payment -->	
@@ -340,6 +345,7 @@
 		<script src="angular/preta-manager/theme/components/switches/switch.directive.js"></script>
 		<script src="angular/preta-manager/directives/state-label.js"></script>
 		<script src="angular/preta-manager/directives/order-status/directive.js"></script>
+		<script src="angular/preta-manager/directives/expense-card/directive.js"></script>
 		<script src="angular/preta-manager/directives/duration-label/directive.js"></script>
 		<script src="angular/common/directives/payment-status/directive.js"></script>
 		<script src="angular/common/directives/generic-status/directive.js"></script>
