--- a/src/main/webapp/angular/preta-admin/index.html
+++ b/src/main/webapp/angular/preta-admin/index.html
@@ -267,6 +267,7 @@
 		<script src="angular/preta-admin/directives/state-label/state-label.js"></script>
 		<script src="angular/preta-admin/directives/shop-sub-card/directive.js"></script>
 		<script src="angular/preta-admin/directives/adv-offer-card/directive.js"></script>
+		<script src="angular/preta-admin/directives/e-account-card/directive.js"></script>
 		<script src="angular/preta-admin/directives/duration-label/duration-label.js"></script>
 		<script src="angular/preta-admin/directives/payment-status/payment-status.js"></script>
 		<!-- End Cutom Directives -->
