Fixed revealed errors; Angular Busy integration; Local Market implementation

--- a/src/main/webapp/angular/preta-admin/index.html
+++ b/src/main/webapp/angular/preta-admin/index.html
@@ -270,6 +270,7 @@
 		<script src="angular/preta-admin/directives/e-account-card/directive.js"></script>
 		<script src="angular/preta-admin/directives/duration-label/duration-label.js"></script>
 		<script src="angular/preta-admin/directives/payment-status/payment-status.js"></script>
+		<script src="angular/preta-admin/directives/local-market-card/directive.js"></script>
 		<!-- End Cutom Directives -->
 		
 		<!-- EMoney Provider -->
@@ -335,6 +336,11 @@
 		<script src="angular/preta-admin/controllers/ExpenseController.js"></script>
 		<script src="angular/preta-admin/services/ExpenseService.js"></script>
 		<!-- End Expense -->
+		
+		<!-- LocalMarket -->
+		<script src="angular/preta-admin/controllers/LocalMarketController.js"></script>
+		<script src="angular/preta-admin/services/LocalMarketService.js"></script>
+		<!-- End LocalMarket -->
 		
 		<!-- AdvOffers -->
 		<script src="angular/preta-admin/controllers/AdvOfferController.js"></script>
