--- a/src/main/webapp/angular/preta-manager/index.html
+++ b/src/main/webapp/angular/preta-manager/index.html
@@ -25,7 +25,8 @@
 		<link rel="stylesheet" href="angular/lib/xeditable.css">
 		<link rel="stylesheet" href="angular/lib/style.css">
 		<link rel="stylesheet" href="angular/preta-manager/css/general.css">
-		<link rel="stylesheet" href="angular/plugins/angular-material/angular-material.min.css" >
+		<link rel="stylesheet" href="angular/plugins/angular-material/angular-material.min.css">
+		<link rel="stylesheet" href="angular/plugins/angular-busy/angular-busy.min.css">
 		<link rel="stylesheet" href="angular/plugins/angular-material-fileinput/lf-ng-md-file-input.min.css" >
 		
 		<!-- End Plugins Styles -->
@@ -250,6 +251,8 @@
 		<script src="angular/plugins/angular-stomp/sockjs.min.js"></script>
 		<script src="angular/plugins/angular-stomp/stomp.min.js"></script>
 		<script src="angular/plugins/angular-stomp/ng-stomp.min.js"></script>
+		<!-- Angular Busy -->
+		<script src="angular/plugins/angular-busy/angular-busy.min.js"></script>
 		<!-- Scrips for App -->
 		<script src="angular/preta-manager/app.js"></script>
 		<script src="angular/preta-manager/app-r.js"></script>
