--- a/src/main/webapp/angular/preta/directives/navbar-top/template.html
+++ b/src/main/webapp/angular/preta/directives/navbar-top/template.html
@@ -10,7 +10,7 @@
 		<div collapse="isNavCollapsed" class="collapse navbar-collapse" uib-collapse="isNavCollapsed">
 			<ul class="nav navbar-nav nav-jusitifed">
 				<li role="presentation" x-ng-if="loggedUser != null && loggedUser.isManager">
-					<a href="preta-manager">Espace Vendeur</a>
+					<a href="hobossa-manager">Espace Vendeur</a>
 				</li>
 				
 				<li role="presentation" x-ng-if="loggedUser != null">
@@ -74,7 +74,6 @@
 				<li role="presentation" x-ng-if="loggedUser != null">
 					<a x-ui-sref="root.orders-all">Mes Commandes</a>
 				</li>
-				<li role="presentation"><a>Plan du site</a></li>
 				<li role="presentation"><a>Aide</a></li>
 			</ul>
 			
