--- a/src/main/webapp/angular/preta/index.html
+++ b/src/main/webapp/angular/preta/index.html
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" href="angular/lib/ion.rangeSlider.css" >
 		<link rel="stylesheet" href="angular/plugins/angular-responsive-tables/angular-responsive-tables.min.css">
 		<link rel="stylesheet" href="angular/plugins/angular-slider/rzslider.min.css">
-		<!-- <link rel="stylesheet" href="angular/lib/ion.rangeSlider.skinFlat.css" > -->
+		<link rel="stylesheet" href="angular/plugins/angular-busy/angular-busy.min.css">
 		<link rel="stylesheet" href="angular/plugins/angular-material/angular-material.min.css" >
 		<!-- End Lib Stymes -->
 		
@@ -146,6 +146,8 @@
 			<script src="angular/preta/directives/notification/directive.js"></script>
 			<!-- Home Slides -->
 			<script src="angular/preta/directives/home-slides/directive.js"></script>
+			<!-- Angular Busy -->
+			<script src="angular/plugins/angular-busy/angular-busy.min.js"></script>
 		<!-- End Custom Directives -->
 		
 		<!-- Buyers -->
