--- a/src/main/webapp/angular/preta/directives/research-widget/template.html
+++ b/src/main/webapp/angular/preta/directives/research-widget/template.html
@@ -1,11 +1,10 @@
-<div class="row  animated bounceInDown">
-	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-		<!-- <img src="angular/preta/img/preta-logo-tmp.png" class="img-responsive center-block" /> -->
-		<img src="https://drive.google.com/uc?id=0B0W0ktANhIydWE1qZUQ4QnBENDQ&export=download" class="img-responsive center-block" />
-	</div>
-
-	<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-		<div class="row">
+<div class="row  animated bounceInDown" style="margin-bottom: 16px;">
+	<div layout="row" layout-align="start center">
+		<div flex="none">
+			<img src="https://drive.google.com/uc?id=0B0W0ktANhIydWE1qZUQ4QnBENDQ&export=download" class="img-responsive center-block" 
+				style="height: 65%; width: 65%;"/>
+		</div>
+		<div flex="auto">
 			<form class="" role="search" style="width: 100% !important; padding-top: 16px;">
 				<div class="form-group form-group-lg">
 					<div class="input-group input-group-lg" style="width: 100% !important;" x-ng-init="searchParams = {}">
